<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ValveFeedback" Id="{fb69a5a3-f64e-4ebd-a088-cc7a4333f589}">
    <Declaration><![CDATA[TYPE ST_ValveFeedback :
STRUCT
	sFeedbackOnName : STRING(8);
	sFeedbackOffName : STRING(8);
	bStaFeedbackOn : BOOL;
	bStaFeedbackOff : BOOL;
	bErrFeedbackOn : BOOL;
	bErrFeedbackOff : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>